<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="welcome_message">Welcome to Dicoding Story!</string>
    <string name="welcome_description">Dicoding Story is platform to share story about everything such as Android, iOS, Machine Learning, Cloud Computing, Front-End, Back-End, and anything related to IT field.</string>
    <string name="welcome_description2">Ready to make your own story?</string>
    <string name="isEdtEmpty">Data cannot be empty!</string>
    <string name="success">Success</string>
    <string name="login_success">Login Success!</string>
    <string name="register_success">Register Success!</string>
    <string name="ok">OK</string>
    <string name="story_created">Story Created!</string>
    <string name="no_media_selected">No media selected</string>
    <string name="password_validation">Passwords must be at least 8 characters</string>
    <string name="email_validation">Invalid Email</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="permission_not_granted">Permission Not Granted!</string>
    <string name="share_your_location">Share Your Location</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="retry">Retry</string>
    <string name="maps">Maps</string>
</resources>